--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  Hi Val!!! :)
+  Hi Val!!! :) You're amaxzing
   <nav>
     <img src="./images/slack-logo.png" alt="slack_logo" />
     <ul>
