--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  Hi Val!!! :) You're amaxzing
+  <h2>Hi Val!!! :) You're amazing!! Cool</h2>
   <nav>
     <img src="./images/slack-logo.png" alt="slack_logo" />
     <ul>
